--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,14 @@
 <%# include the header.ejs layout for the header %>
 <%- include('partials/header'); -%>
 
-<h1>Home!</h1>
+<h1>Home</h1>
 
-<%= homeText %>
+<p><%= homeText %></p>
+
+<% posts.forEach(function(post){ %>
+  <h1><%= post.title %></h1>
+  <p><%= post.body %></p>
+<% }); %>
 
 <%# include the header.ejs layout for the header %>
 <%- include('partials/footer'); -%>
